# iAngel-CyberIDE

./: .dockerignore  .env.example  .geminiignore  .gitignore  .npmignore  BACKEND_REGION_SYNC.md  BUILD_NOTES.md  CHANGELOG.md  CLAUDE.md  COMPLIANCE_CHECKLIST.md  Dockerfile.backend  Dockerfile.dev  Dockerfile.frontend  ENVIRONMENT_SETUP.md  GEMINI.md  IMPLEMENTATION_LOCKFILES.md  IMPLEMENTATION_SUMMARY.md  INSTALL_NEURAL_CORE.sh  LICENSE  NEURAL_MANIFESTO.md  NEURAL_QUICKSTART.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  TEST_EXECUTION_REPORT.md  TEST_SUITE_SUMMARY.md  docker-compose.yml  neural  neural_core.py  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  start_neural_core.py  (+7 more)
.Jules/: palette.md
.claude/: CLAUDE.md  COLLABORATION_SUCCESS_LOG.md
.gemini/: mcp-config.md  mcp-tiers-guide.md  settings.json  validation-report-2025-12-11.md
.gemini/prompts/: neural-architect.md
.gemini/standards/: anti-reward-hacking.md  python-strict.md  typescript-strict.md
.github/: MCP-SETUP.md  copilot-instructions.md  mcp-configuration.json
.github/agents/: 3DEngineer.md  DocXpert.agent.md  Senior GitHub Automation Engineer.agent.md  chef-produit-technique-tpm.agent.md  docXpert.agent.md  ingenieur-devops-sre.agent.md  ingenieur-mlops.agent.md  specialiste-securite-conformite.agent.md
.github/workflows/: copilot-setup-steps.yml  doc-guardian.yml
.jules/: bolt.md  sentinel.md
backend/: __init__.py
backend/cto/: __init__.py  orchestrator.py
backend/standards/: README.md  pyproject.strict.toml
docs/: CYBERIDE_VISION_ANALYSIS.md  POST_DEVELOPMENT_UTILITY.md  README.md  git_pulse_filters.md
docs/adr/: ADR-001-logging-strategy.md  (+1 more)
neural_cli/: README.md  __init__.py  file_mapper.py  file_watcher.py  gemini_client.py  git_pulse.py  logging_config.py  main.py  metric_calculator.py  models.py  regression_detector.py  test_analyzer.py  test_history.py
neural_sdk/: README.md  pyproject.toml
neural_sdk/src/neural_sdk/: __init__.py
src/: App.tsx  index.css  vite-env.d.ts
tests/: __init__.py  conftest.py  test_agent_evaluator.py  test_file_watcher.py  test_git_pulse.py  test_integration.py  test_main.py  test_metric_calculator.py  test_metrics_manager.py  test_models.py  test_regression_detector.py  test_sample.py  test_test_analyzer.py  test_vector_memory.py  what would be a _rule_ kind of metric to describe....md
(+85 files in other folders)
