[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberIDE"
version = "0.1.0"
description = "Neural IDE with 3D brain visualization"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "typer>=0.9.0,<1.0.0",
    "rich>=13.6.0,<14.0.0",
    "colorama>=0.4.6,<1.0.0",
    "watchdog>=3.0.0,<4.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "pytest>=7.4.0,<10.0.0",
    "pytest-cov>=4.1.0,<8.0.0",
    "pytest-json-report>=1.5.0,<2.0.0",
    "pytest-asyncio>=0.21.0,<2.0.0",
    "httpx>=0.25.0,<1.0.0",
    "black>=23.9.1,<26.0.0",
    "pylint>=3.0.0,<5.0.0",
    "openai>=1.3.0,<3.0.0",
    "anthropic>=0.5.0,<1.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.coverage.run]
source = ["neural_cli"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]