[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neural-sdk"
version = "0.1.0"
description = "The Nervous System for your Codebase - Connects to iAngel Neural Core"
readme = "README.md"
authors = [
    { name = "iAngel", email = "dev@iangel.ai" }
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/iAngelAi/iAngel-CyberIDE"
